--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "react-router-native": "^5.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@babel/eslint-parser": "^7.18.2",
-    "eslint": "^8.16.0",
-    "eslint-plugin-react": "^7.30.0",
+    "@babel/eslint-parser": "^7.16.5",
+    "eslint": "^8.6.0",
+    "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-native": "^4.0.0"
   },
   "private": true
