--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "lint": "eslint ./src/**/*.{js,jsx} App.js --no-error-on-unmatched-pattern"
   },
   "dependencies": {
+    "babel-preset-expo": "^9.1.0",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-web": "0.17.1",
-    "react-router-native": "^5.3.2"
+    "react-router-native": "6.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
