--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@apollo/client": "^3.6.6",
     "@expo/metro-config": "^0.3.18",
     "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-picker/picker": "2.2.1",
     "babel-preset-expo": "^9.1.0",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.1",
@@ -23,13 +24,14 @@
     "expo-status-bar": "~1.2.0",
     "formik": "^2.2.9",
     "graphql": "^16.5.0",
+    "i": "^0.3.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-web": "0.17.1",
     "react-router-native": "6.3.0",
-    "yup": "^0.32.11",
-    "@react-native-picker/picker": "2.2.1"
+    "use-debounce": "^8.0.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
